[package]
name = "miuchiz-recovery"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
eframe = "0.18.0"
rfd = "0.8"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
strip = true
lto = true
panic = "abort"
